--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
     <title></title>
   </head>
   <body>
-    
+    <div class="container">
+      <div class="well">
+        <form id="place" class="form-group">
+         <input type="text" name="name" value="" class="form-control">
+         <input type="text" name="" value="" class="form-control">
+         <input type="text" name="" value="" class="form-control">
+         <input type="text" name="" value="" class="form-control">
+         <input type="text" name="" value="" class="form-control">
+         <input type="text" name="" value="" class="form-control">
+
+
+         <button class="btn btn-primary" type="submit" name="button">Submit</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
