accept user input from form, add to array of places, and show list of places.

--- a/index.html
+++ b/index.html
@@ -12,16 +12,17 @@
     <div class="container">
       <div class="well">
         <form id="place" class="form-group">
-         <input type="text" name="name" value="" class="form-control">
-         <input type="text" name="" value="" class="form-control">
-         <input type="text" name="" value="" class="form-control">
-         <input type="text" name="" value="" class="form-control">
-         <input type="text" name="" value="" class="form-control">
-         <input type="text" name="" value="" class="form-control">
-
-
-         <button class="btn btn-primary" type="submit" name="button">Submit</button>
+         <input id="name" type="text" name="name" value="" class="form-control">
+         <input id="date" type="text" name="date" value="" class="form-control">
+         <input id="landmark" type="text" name="landmark" value="" class="form-control">
+         <input id="season" type="text" name="season" value="" class="form-control">
+         <input id="note" type="text" name="note" value="" class="form-control">
+         <div class="panel">
+           <button class="btn btn-primary" type="submit" name="button">Submit</button>
+         </div>
         </form>
+      </div>
+      <div class="well" id="viewport">
       </div>
     </div>
   </body>
