Show the list of places and show whole record when clicked.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
       </div>
       <div class="well" id="viewport">
       </div>
+      <div class="well" id="recordView">
+      </div>
     </div>
   </body>
 </html>
