enable Kill X on places

--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
           <div>
             <h2>Locations List:</h2>
           </div>
-            <div id="viewport">
+            <div class="col-md-9" id="viewport">
+          </div>
+          <div class="col-md-2" id="killButtons">
           </div>
         </div><!-- end col-->
 
@@ -45,10 +47,10 @@
       <div class="row">
 
           <div class="well rec" >
-            <h2>Places</h2>
+            <h2>View a Place:</h2>
             <div id="recordView">
             </div>
-          </div>
+
 
       </div> <!-- end row -->
 
